tests/specs/ecosystem/corset/time/0_0_6.test
corset/time/0.0.6
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /src/primitives.ts:293:14
    | 
293 | export const unless = (cb: Detectable.Listener<any>) => {
    |              ^^^^^^ this function is missing an explicit return type
    | 
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


